# gex-f072

./: .gitignore  .gitmodules  .mxproject  CMakeLists.txt  Makefile  README.md  STM32F072RBTx_FLASH.ld  attach.gdb  build.mk  build.mk.example  convertnl.sh  dbg-client.sh  dbg-server.sh  fix_cube_mf.php  gex-f072.ioc  openocd.cfg  parsemap.php
Drivers/STM32F0xx_HAL_Driver/Src/: stm32f0xx_hal_pcd.c
GexUnits/: units_manifest.h
GexUnits/template/: unit_tpl.h
Inc/: main.h  nrf_pins.h  plat_compat.h  stm32f0xx_hal_conf.h  stm32f0xx_it.h  usb.h
Patches/cube/: 02-Move_asserts_to_stm32_assert.patch  03-deassertify_2.patch  05-Limit_number_of_endpoints.patch  07-Turn__Error_Handler_into_a_macro.patch  08-fix_cube_spi_and_i2c_h_files.patch~  08-set_target_in_makefile.patch
Patches/usb/: 01-USB_prep_CDC_MSC_for_composite.patch  06-limit_nr_of_ep_and_cdc_buf_size_in_usbd.patch
Src/: main.c  platform_resources.c  stm32f0xx_hal_msp.c  stm32f0xx_it.c  usb.c
